# xfce4-datetime-plugin

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README.md  THANKS  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.ac.in  configure.in.in  module.xml  svn-commit.tmp
datetime/: .cvsignore  Makefile.am  Makefile.in  datetime.c
datetime_0_4_0/panel-plugin/: datetime-dialog.c  datetime-dialog.h
m4/: Makefile.am  Makefile.in
panel-plugin/: CHANGELOG  Makefile.am  datetime-dialog.c  datetime-dialog.h  datetime.c  datetime.desktop.in  datetime.desktop.in.in  datetime.h  xfce46-compat.c  xfce46-compat.h
po/: ChangeLog  LINGUAS  POTFILES.in  am.po  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  datetime.pot  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa_IR.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  kk.po  ko.po  lt.po  lv.po  ms.po  (+31 more)
